.infrastructure/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp-ingress
  namespace: todoapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
        - pathType: ImplementationSpecific
          path: /(/|$)(.*)
          backend:
            service:
              name: todoapp-service
              port:
                number: 80
